# report_todo

./: .todoignore  Cargo.toml  README.md  report_todo.toml
report_todo/: Cargo.toml  README.md  report_todo.toml
report_todo/src/: main.rs  todo_error.rs
report_todo/src/checkers/: git_diff.rs  mod.rs  source_tree.rs  source_tree_simple.rs  source_tree_syntect.rs
report_todo/syntaxes/: README.md  TOML.sublime-syntax
report_todo/test_cases/: html.html  markdown.md  plain.txt  rust.rs  toml.toml  unrecognized.unknown-file-extension  yaml.yaml
span/: Cargo.toml  README.md
span/src/: lib.rs  position.rs  span.rs
src/: comment_extract.pest  comment_extract.rs  console_emitter.rs  main.rs  mini_languages.pest
